--- a/riaaya-front/package.json
+++ b/riaaya-front/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+    "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "axios": "^1.10.0",
