Modify package.json for preview script and engines
Updated the preview script to include host and port parameters. Updated Node.js and npm engine requirements to version 20.0.0 and 10.0.0 respectively.

--- a/riaaya-front/package.json
+++ b/riaaya-front/package.json
@@ -7,11 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --host 0.0.0.0 --port $PORT"
   },
-    "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
