--- a/riaaya-backend/package.json
+++ b/riaaya-backend/package.json
@@ -38,6 +38,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
+    "axios": "^1.10.0",
     "class-validator": "^0.14.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -92,6 +93,7 @@
     "testEnvironment": "node"
   }
 }
+
 
 
 
